--- a/package.json
+++ b/package.json
@@ -1,37 +1,32 @@
 {
-  "name": "rphstudio-asteroid",
-  "version": "1.2.1",
-  "description": "rphstudio-asteroid",
-  "keywords": [
-    "rphstudio"
-  ],
-  "devDependencies": {
-    "expose-loader": "0.7.5",
-    "ts-loader": "4.4.2",
-    "typescript": "2.9.2",
-    "webpack": "4.15.0",
-    "webpack-cli": "3.0.8",
-    "webpack-dev-server": "3.1.4"
-  },
+  "name": "asteroid-client",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "phaser": "3.10.1"
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
+    "eventemitter3": "^3.1.0",
+    "phaser": "^3.16.2",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-resize-detector": "^3.1.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts-ts": "^3.1.0",
+    "socket.io-client": "^2.1.1"
   },
   "scripts": {
-    "dev": "webpack --mode development && webpack-dev-server --mode development",
-    "prod": "webpack --mode production && webpack-dev-server --mode production",
-    "build": "webpack --mode production"
+    "dev": "react-scripts-ts start",
+    "start": "react-scripts-ts start",
+    "build": "react-scripts-ts build",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/digitsensitive/phaser3-typescript.git"
-  },
-  "author": {
-    "name": "digitsensitive",
-    "email": "digit.sensitivee@gmail.com"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/digitsensitive/phaser3-typescript/issues"
-  },
-  "homepage": "https://github.com/digitsensitive/phaser3-typescript#readme"
+  "devDependencies": {
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.11.3",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "typescript": "^3.3.3333"
+  }
 }
