--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "^11.11.3",
     "@types/react": "^16.4.6",
     "@types/react-dom": "^16.0.6",
+    "electron-packager": "^13.1.1",
     "typescript": "^3.3.3333"
   }
 }
